--- a/package.json
+++ b/package.json
@@ -1,35 +1,32 @@
 {
-  "name": "with-typescript",
+  "name": "turtle-gambit",
   "version": "1.0.0",
-  "scripts": {
-    "dev": "next",
-    "build": "next build && next export",
-    "start": "next start",
-    "type-check": "tsc"
-  },
+  "main": "./lib/index.js",
+  "license": "MIT",
   "dependencies": {
-    "@emotion/react": "^11.1.1",
-    "@emotion/server": "^11.0.0",
-    "@emotion/styled": "^11.0.0",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@types/color": "^3.0.1",
-    "@use-it/event-listener": "^0.1.6",
-    "babel-preset-env": "^1.7.0",
-    "color": "^3.1.3",
-    "next": "latest",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-three-fiber": "^5.3.1",
-    "three": "^0.122.0",
-    "three-obj-loader-es6-module": "^1.0.1",
-    "three-orbitcontrols-ts": "git+https://git@github.com/nicolaspanel/three-orbitcontrols-ts.git"
+    "@types/carlo": "^0.9.1",
+    "@types/node-json-db": "^0.9.3",
+    "@types/ws": "^7.4.0",
+    "carlo": "^0.9.46",
+    "ngrok": "^3.3.0",
+    "node-json-db": "^1.1.0",
+    "p-queue": "^6.6.2",
+    "patch-package": "^6.2.2",
+    "postinstall-postinstall": "^2.1.0",
+    "puppeteer-core": "^5.5.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.1.2",
+    "ws": "^7.4.0"
   },
-  "devDependencies": {
-    "@types/node": "^12.12.21",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "typescript": "4.0"
-  },
-  "license": "MIT"
+  "files": [
+    "./bin/*",
+    "./lib/*"
+  ],
+  "typings": "./lib/index.d.ts",
+  "scripts": {
+    "postinstall": "patch-package",
+    "dev": "tsc && node lib/index.js",
+    "build": "tsc",
+    "lint": "tslint -c tslint.json src/**/*.ts"
+  }
 }
