--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "puppeteer-core": "^5.5.0",
     "tslint": "^6.1.3",
     "typescript": "^4.1.2",
+    "next": "latest",
     "ws": "^7.4.0"
   },
   "files": [
